[gd_scene load_steps=7 format=3 uid="uid://cgtklmplpjc0e"]

[ext_resource type="Script" uid="uid://c8juq47xrite2" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Shader" uid="uid://dhu63ivwhis8d" path="res://assets/main_menu.gdshader" id="2_wu84c"]
[ext_resource type="FontFile" uid="uid://b51igss45y0cu" path="res://fonts/Jersey10-Regular.ttf" id="3_8ln24"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ow34m"]
shader = ExtResource("2_wu84c")
shader_parameter/base_color = Color(0.125, 0.188, 0.125, 1)
shader_parameter/scanline_intensity = 0.05
shader_parameter/scanline_frequency = 480.0
shader_parameter/noise_intensity = 0.02
shader_parameter/time_scale = 1.0

[sub_resource type="FontFile" id="FontFile_ukcvp"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0

[sub_resource type="Environment" id="Environment_2wh52"]
glow_enabled = true
glow_intensity = 0.68
glow_bloom = 0.1
glow_hdr_threshold = 0.9

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ow34m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.188235, 0.12549, 1)

[node name="TitleVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 2

[node name="MenuTitleLabel" type="Label" parent="TitleVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8ln24")
theme_override_font_sizes/font_size = 50
text = "Break.exe"
horizontal_alignment = 1

[node name="Underline1" type="ColorRect" parent="TitleVBox"]
custom_minimum_size = Vector2(70, 3)
layout_mode = 2
color = Color(0.784314, 0.0627451, 0.180392, 1)

[node name="Underline2" type="ColorRect" parent="TitleVBox"]
custom_minimum_size = Vector2(60, 3)
layout_mode = 2
color = Color(0.784314, 0.0627451, 0.180392, 1)

[node name="OptionsVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -52.0
offset_right = 40.0
offset_bottom = 52.0
grow_vertical = 2
theme_override_constants/separation = 5

[node name="PlayOption" type="HBoxContainer" parent="OptionsVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ArrowPlay" type="Label" parent="OptionsVBox/PlayOption"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_ukcvp")
theme_override_font_sizes/font_size = 20
text = "   "
vertical_alignment = 1

[node name="TextPlay" type="Label" parent="OptionsVBox/PlayOption"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8ln24")
theme_override_font_sizes/font_size = 30
text = "Play"
vertical_alignment = 1

[node name="SettingsOption" type="HBoxContainer" parent="OptionsVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ArrowSettings" type="Label" parent="OptionsVBox/SettingsOption"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_ukcvp")
theme_override_font_sizes/font_size = 20
text = "   "
vertical_alignment = 1

[node name="TextSettings" type="Label" parent="OptionsVBox/SettingsOption"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8ln24")
theme_override_font_sizes/font_size = 30
text = "Settings"
vertical_alignment = 1

[node name="CreditsOption" type="HBoxContainer" parent="OptionsVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ArrowCredits" type="Label" parent="OptionsVBox/CreditsOption"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_ukcvp")
theme_override_font_sizes/font_size = 20
text = "   "
vertical_alignment = 1

[node name="TextCredits" type="Label" parent="OptionsVBox/CreditsOption"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8ln24")
theme_override_font_sizes/font_size = 30
text = "Credits"
vertical_alignment = 1

[node name="ExitOption" type="HBoxContainer" parent="OptionsVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ArrowExit" type="Label" parent="OptionsVBox/ExitOption"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_ukcvp")
theme_override_font_sizes/font_size = 20
text = "   "
vertical_alignment = 1

[node name="TextExit" type="Label" parent="OptionsVBox/ExitOption"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_8ln24")
theme_override_font_sizes/font_size = 30
text = "Exit"
vertical_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2wh52")
